Fix layout issue

--- a/resources/assets/styles/components/_layout.scss
+++ b/resources/assets/styles/components/_layout.scss
@@ -1,7 +1,6 @@
 .Layout {
   display: flex;
   flex-direction: column;
-  height: 100vh;
 
   &_main {
     flex: 1;
