--- a/resources/assets/styles/components/_modal.scss
+++ b/resources/assets/styles/components/_modal.scss
@@ -8,13 +8,13 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(255, 255, 255, 0.85);
   text-align: center;
 }
 
 .modal-dialog {
   display: inline-block;
+  box-shadow: 0 0 8px 0 rgba(229, 229, 229, 0.5);
 }
 
 /* Modal Content */
@@ -75,11 +75,18 @@
     }
 
     .btn {
-      width: 100px;
+      width: 96px;
       height: 32px;
       padding-top: 0;
       line-height: 32px;
       text-decoration: none;
+      font-size: 14px;
+      color: white;
+      font-weight: normal;
+
+      &:hover {
+        background-image: linear-gradient(to bottom, #44eaff, #00c3ff);
+      }
     }
   }
 }
